# amigo

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  docker-compose.yml  package.json
apps/api/: .env.example  Cargo.toml  Dockerfile  nixpacks.toml
apps/api/src/: db.rs  main.rs  slug.rs
apps/sawsan/: index.html  package.json
apps/sawsan/public/: style.css
apps/trifoi/: index.html  package.json  pnpm-lock.yaml
apps/trifoi/public/: manifest.webmanifest  sw.js
apps/trifoi/src/: index.css  main.tsx
apps/trifoi/src/app/: App.tsx  modes.ts  presence.ts  useCrucibleRecorder.ts  useMode.ts  usePresence.ts
apps/trifoi/src/components/: CrucibleRecorder.tsx  ModePill.tsx  ModeSelector.tsx  PresenceStrip.tsx  SignalScope.tsx
apps/trifoi/src/storage/: storage.ts
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/app/: ClientProviders.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/[callsign]/: page.tsx
apps/web/app/[callsign]/[slug]/: page.tsx
apps/web/app/[slug]/: page.tsx
apps/web/app/api/og/: render.tsx  route.tsx
apps/web/app/components/: SignalLost.tsx
apps/web/app/covenant/: page.tsx
apps/web/app/hooks/: useBurn.ts
apps/web/app/i18n/: LangSwitch.tsx  en.json  es.json  i18n.ts  ro.json  useTranslation.ts  useTranslation.tsx
apps/web/app/joint/: page.tsx
apps/web/app/joint/[id]/: JointClient.tsx  page.tsx
apps/web/app/lib/: paletteMap.ts  resolvePalette.ts
apps/web/tests/: critical-path.spec.ts
docs/: MAINTENANCE.md  signal-engine.md
scripts/: dev.mjs
(+5 files in other folders)
