[package]
name = "amigo-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
anyhow = "1"
rand = "0.8"
time = { version = "0.3", features = ["formatting"] }
